// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Services view should be possible to click button to access next page 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Services>
      <main
        className="page"
      >
        <div
          className="services-wrapper"
        >
          <section
            className="services-presentation-wrapper"
          >
            <h1
              className="services-title"
            >
              Mes compétences.
            </h1>
            <p
              className="services-subtitle"
              key="Dével"
            >
              Développeur frontend sensible au comportement de l'utilisateur, mes compétences s'étendent de l'étude à la réalisation de projets web et mobile.
            </p>
            <p
              className="services-subtitle"
              key="J'ai "
            >
              J'ai pour habitude de travailler en étroite collaboration avec l'UI/UX designer, afin de m'imprégner des guidelines et de les respecter durant la phase d'intégration.
            </p>
            <p
              className="services-subtitle"
              key="Ecrir"
            >
              Ecrire du code "éco-friendly", afin de créer des applications maintenables à long terme est l'un de mes objectifs principal.
            </p>
            <p
              className="services-subtitle"
              key="J'aim"
            >
              J'aime partager, échanger autour des bonnes pratiques, et apprendre d'autrui.
            </p>
            <div
              className="skills-nav-wrapper"
            >
              <NextPrevButton
                handleClick={[Function]}
                text="Intro"
              >
                <button
                  className="next-prev-btn"
                  onClick={[Function]}
                >
                  <p>
                    Intro
                  </p>
                </button>
              </NextPrevButton>
               //
               
              <NextPrevButton
                handleClick={[Function]}
                text="Hard skills"
              >
                <button
                  className="next-prev-btn"
                  onClick={[Function]}
                >
                  <p>
                    Hard skills
                  </p>
                </button>
              </NextPrevButton>
               
              //
               
              <NextPrevButton
                handleClick={[Function]}
                text="Soft skills"
              >
                <button
                  className="next-prev-btn"
                  onClick={[Function]}
                >
                  <p>
                    Soft skills
                  </p>
                </button>
              </NextPrevButton>
               
            </div>
            <div>
              <ClassicButton
                endpoint="/projets"
                text="Visiter les projets"
              >
                <Link
                  className="classic-btn "
                  to="/projets"
                >
                  <LinkAnchor
                    className="classic-btn "
                    href="/projets"
                    navigate={[Function]}
                  >
                    <a
                      className="classic-btn "
                      href="/projets"
                      onClick={[Function]}
                    >
                      Visiter les projets
                    </a>
                  </LinkAnchor>
                </Link>
              </ClassicButton>
            </div>
          </section>
          <section
            className="skills-wrapper"
          >
            <div
              className="skill-wrapper"
              key="function SvgCoffee0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCoffee0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Découverte
                <br />
                du projet
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgHelp0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgHelp0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Accompagnement
                <br />
                & réflexion
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgIntegration0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgIntegration0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Intégration
                <br />
                des maquettes
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgDevelopment0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgDevelopment0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Développement
                <br />
                front-end
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgProject0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgProject0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Suivi de projet
                <br />
                & SAV
              </p>
            </div>
          </section>
        </div>
      </main>
    </Services>
  </Router>
</BrowserRouter>
`;

exports[`Services view should render 5 skills 1`] = `
<BrowserRouter>
  <Router
    history={
      Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      }
    }
  >
    <Services>
      <main
        className="page"
      >
        <div
          className="services-wrapper"
        >
          <section
            className="services-presentation-wrapper"
          >
            <h1
              className="services-title"
            >
              Mes compétences.
            </h1>
            <p
              className="services-subtitle"
              key="Dével"
            >
              Développeur frontend sensible au comportement de l'utilisateur, mes compétences s'étendent de l'étude à la réalisation de projets web et mobile.
            </p>
            <p
              className="services-subtitle"
              key="J'ai "
            >
              J'ai pour habitude de travailler en étroite collaboration avec l'UI/UX designer, afin de m'imprégner des guidelines et de les respecter durant la phase d'intégration.
            </p>
            <p
              className="services-subtitle"
              key="Ecrir"
            >
              Ecrire du code "éco-friendly", afin de créer des applications maintenables à long terme est l'un de mes objectifs principal.
            </p>
            <p
              className="services-subtitle"
              key="J'aim"
            >
              J'aime partager, échanger autour des bonnes pratiques, et apprendre d'autrui.
            </p>
            <div
              className="skills-nav-wrapper"
            >
              <NextPrevButton
                handleClick={[Function]}
                text="Intro"
              >
                <button
                  className="next-prev-btn"
                  onClick={[Function]}
                >
                  <p>
                    Intro
                  </p>
                </button>
              </NextPrevButton>
               //
               
              <NextPrevButton
                handleClick={[Function]}
                text="Hard skills"
              >
                <button
                  className="next-prev-btn"
                  onClick={[Function]}
                >
                  <p>
                    Hard skills
                  </p>
                </button>
              </NextPrevButton>
               
              //
               
              <NextPrevButton
                handleClick={[Function]}
                text="Soft skills"
              >
                <button
                  className="next-prev-btn"
                  onClick={[Function]}
                >
                  <p>
                    Soft skills
                  </p>
                </button>
              </NextPrevButton>
               
            </div>
            <div>
              <ClassicButton
                endpoint="/projets"
                text="Visiter les projets"
              >
                <Link
                  className="classic-btn "
                  to="/projets"
                >
                  <LinkAnchor
                    className="classic-btn "
                    href="/projets"
                    navigate={[Function]}
                  >
                    <a
                      className="classic-btn "
                      href="/projets"
                      onClick={[Function]}
                    >
                      Visiter les projets
                    </a>
                  </LinkAnchor>
                </Link>
              </ClassicButton>
            </div>
          </section>
          <section
            className="skills-wrapper"
          >
            <div
              className="skill-wrapper"
              key="function SvgCoffee0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCoffee0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Découverte
                <br />
                du projet
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgHelp0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgHelp0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Accompagnement
                <br />
                & réflexion
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgIntegration0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgIntegration0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Intégration
                <br />
                des maquettes
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgDevelopment0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgDevelopment0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Développement
                <br />
                front-end
              </p>
            </div>
            <div
              className="skill-wrapper"
              key="function SvgProject0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgProject0.name})
  );
}_skill"
            >
              <div
                className="skill-cube"
              >
                <img
                  alt=""
                  src={[Function]}
                  title=""
                />
              </div>
              <p>
                Suivi de projet
                <br />
                & SAV
              </p>
            </div>
          </section>
        </div>
      </main>
    </Services>
  </Router>
</BrowserRouter>
`;

exports[`Services view should render Services component correctly 1`] = `
<Fragment>
  <main
    className="page"
  >
    <div
      className="services-wrapper"
    >
      <section
        className="services-presentation-wrapper"
      >
        <h1
          className="services-title"
        >
          Mes compétences.
        </h1>
        <p
          className="services-subtitle"
          key="Dével"
        >
          Développeur frontend sensible au comportement de l'utilisateur, mes compétences s'étendent de l'étude à la réalisation de projets web et mobile.
        </p>
        <p
          className="services-subtitle"
          key="J'ai "
        >
          J'ai pour habitude de travailler en étroite collaboration avec l'UI/UX designer, afin de m'imprégner des guidelines et de les respecter durant la phase d'intégration.
        </p>
        <p
          className="services-subtitle"
          key="Ecrir"
        >
          Ecrire du code "éco-friendly", afin de créer des applications maintenables à long terme est l'un de mes objectifs principal.
        </p>
        <p
          className="services-subtitle"
          key="J'aim"
        >
          J'aime partager, échanger autour des bonnes pratiques, et apprendre d'autrui.
        </p>
        <div
          className="skills-nav-wrapper"
        >
          <NextPrevButton
            handleClick={[Function]}
            text="Intro"
          />
           //
           
          <NextPrevButton
            handleClick={[Function]}
            text="Hard skills"
          />
           
          //
           
          <NextPrevButton
            handleClick={[Function]}
            text="Soft skills"
          />
           
        </div>
        <div>
          <ClassicButton
            endpoint="/projets"
            text="Visiter les projets"
          />
        </div>
      </section>
      <section
        className="skills-wrapper"
      >
        <div
          className="skill-wrapper"
          key="function SvgCoffee0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgCoffee0.name})
  );
}_skill"
        >
          <div
            className="skill-cube"
          >
            <img
              alt=""
              src={[Function]}
              title=""
            />
          </div>
          <p>
            Découverte
            <br />
            du projet
          </p>
        </div>
        <div
          className="skill-wrapper"
          key="function SvgHelp0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgHelp0.name})
  );
}_skill"
        >
          <div
            className="skill-cube"
          >
            <img
              alt=""
              src={[Function]}
              title=""
            />
          </div>
          <p>
            Accompagnement
            <br />
            & réflexion
          </p>
        </div>
        <div
          className="skill-wrapper"
          key="function SvgIntegration0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgIntegration0.name})
  );
}_skill"
        >
          <div
            className="skill-cube"
          >
            <img
              alt=""
              src={[Function]}
              title=""
            />
          </div>
          <p>
            Intégration
            <br />
            des maquettes
          </p>
        </div>
        <div
          className="skill-wrapper"
          key="function SvgDevelopment0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgDevelopment0.name})
  );
}_skill"
        >
          <div
            className="skill-cube"
          >
            <img
              alt=""
              src={[Function]}
              title=""
            />
          </div>
          <p>
            Développement
            <br />
            front-end
          </p>
        </div>
        <div
          className="skill-wrapper"
          key="function SvgProject0(props) {
  return React.createElement(
    'svg', 
    Object.assign({}, props, {'data-file-name': SvgProject0.name})
  );
}_skill"
        >
          <div
            className="skill-cube"
          >
            <img
              alt=""
              src={[Function]}
              title=""
            />
          </div>
          <p>
            Suivi de projet
            <br />
            & SAV
          </p>
        </div>
      </section>
    </div>
  </main>
</Fragment>
`;
